// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component should export support constants, types: support 1`] = `
{
  "TextAreResizeOrientation": {
    "both": "both",
    "default": undefined,
    "horizontal": "horizontal",
    "none": "none",
    "vertical": "vertical",
  },
}
`;

exports[`TextArea Component should handle readOnly, disabled: active 1`] = `
<textarea
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__textarea  "
  id="generatedid-"
  name="generatedid-"
/>
`;

exports[`TextArea Component should handle readOnly, disabled: disabled 1`] = `
<textarea
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__textarea  "
  disabled=""
  id="generatedid-"
  name="generatedid-"
/>
`;

exports[`TextArea Component should handle readOnly, disabled: readOnly 1`] = `
<textarea
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__textarea  "
  id="generatedid-"
  name="generatedid-"
  readonly=""
/>
`;

exports[`TextArea Component should render a basic component: basic component 1`] = `
<textarea
  aria-invalid="false"
  class="pf-c-form-control quipucords-form__textarea  "
  id="generatedid-"
  name="generatedid-"
/>
`;

exports[`TextArea Component should return an emulated onChange event: emulated event, change 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        id="generatedid-"
        name="generatedid-"
      >
        lorem ipsum
      </textarea>,
      "id": "generatedid-",
      "keyCode": undefined,
      "name": "generatedid-",
      "persist": [Function],
      "target": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        id="generatedid-"
        name="generatedid-"
      >
        lorem ipsum
      </textarea>,
      "value": "lorem ipsum",
    },
  ],
]
`;

exports[`TextArea Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        id="generatedid-"
        name="generatedid-"
      />,
      "id": "generatedid-",
      "keyCode": 27,
      "name": "generatedid-",
      "persist": [Function],
      "target": <textarea
        aria-invalid="false"
        class="pf-c-form-control quipucords-form__textarea  "
        id="generatedid-"
        name="generatedid-"
      />,
      "value": "",
    },
  ],
]
`;
